commit translated contents