@@ -1,20 +1,20 @@
 ---
 title: Azure Cache for Redis를 Azure Spring Cloud 애플리케이션에 바인딩
 description: Azure Cache for Redis를 Azure Spring Cloud 애플리케이션에 바인딩하는 방법 알아보기
-author: bmitchell287
+author: karlerickson
 ms.service: spring-cloud
 ms.topic: how-to
 ms.date: 10/31/2019
-ms.author: brendm
+ms.author: karler
 ms.custom: devx-track-java
-ms.openlocfilehash: dda826b50a74c109609fc7eec734b1d0de927ab3
-ms.sourcegitcommit: 4a54c268400b4158b78bb1d37235b79409cb5816
+ms.openlocfilehash: 31cb033bad3a6b356b447754670fd88bf0ee4663
+ms.sourcegitcommit: 6c6b8ba688a7cc699b68615c92adb550fbd0610f
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 04/28/2021
-ms.locfileid: "108135350"
+ms.lasthandoff: 08/13/2021
+ms.locfileid: "122537343"
 ---
-# <a name="bind-azure-cache-for-redis-to-your-azure-spring-cloud-application"></a>Azure Cache for Redis를 Azure Spring Cloud 애플리케이션에 바인딩 
+# <a name="bind-azure-cache-for-redis-to-your-azure-spring-cloud-application"></a>Azure Cache for Redis를 Azure Spring Cloud 애플리케이션에 바인딩
 
 **이 문서는 다음에 적용됩니다.** ✔️ Java
 
@@ -28,7 +28,7 @@ Spring Boot 애플리케이션을 수동으로 구성하는 대신 Azure Spring 
 
 배포된 Azure Spring Cloud 인스턴스가 없는 경우 [Azure Spring Cloud 앱 배포에 대한 빠른 시작](./quickstart.md)의 단계를 따릅니다.
 
-## <a name="bind-azure-cache-for-redis"></a>Azure Cache for Redis 바인딩
+## <a name="prepare-your-java-project"></a>Java 프로젝트 준비
 
 1. 프로젝트의 pom.xml 파일에 다음 종속성을 추가합니다.
 
@@ -38,10 +38,14 @@ Spring Boot 애플리케이션을 수동으로 구성하는 대신 Azure Spring 
         <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
     </dependency>
     ```
+
 1. `application.properties` 파일에서 `spring.redis.*` 속성을 제거합니다.
 
 1. `az spring-cloud app update`를 사용하여 현재 배포를 업데이트하거나 `az spring-cloud app deployment create`를 사용하여 새 배포를 만듭니다.
 
+## <a name="bind-your-app-to-the-azure-cache-for-redis"></a>Azure Cache for Redis에 앱 바인딩
+
+#### <a name="service-binding"></a>[서비스 바인딩](#tab/Service-Binding)
 1. Azure Portal에서 Azure Spring Cloud 서비스 페이지로 이동합니다. **Application Dashboard** 로 이동하여 Azure Cache for Redis에 바인딩할 애플리케이션을 선택합니다. 이 애플리케이션은 이전 단계에서 업데이트하거나 배포한 애플리케이션과 동일합니다.
 
 1. **서비스 바인딩** 을 선택하고 **서비스 바인딩 만들기** 를 선택합니다. **바인딩 유형** 값 **Azure Cache for Redis**, 사용자의 Azure Cache for Redis 서버 및 **기본** 키 옵션을 선택하도록 양식을 작성합니다.
@@ -49,12 +53,83 @@ Spring Boot 애플리케이션을 수동으로 구성하는 대신 Azure Spring 
 1. 앱을 다시 시작합니다. 이제 바인딩이 작동합니다.
 
 1. 서비스 바인딩이 올바른지 확인하려면 바인딩 이름을 선택하고 해당 세부 정보를 확인합니다. `property` 필드는 다음과 같이 표시되어야 합니다.
-    ```
+
+    ```properties
     spring.redis.host=some-redis.redis.cache.windows.net
     spring.redis.port=6380
     spring.redis.password=abc******
     spring.redis.ssl=true
     ```
+
+#### <a name="terraform"></a>[Terraform](#tab/Terraform)
+
+다음 Terraform 스크립트는 Azure Cache for Redis를 사용하여 Azure Spring Cloud 앱을 설정하는 방법을 보여 줍니다.
+
+```terraform
+provider "azurerm" {
+  features {}
+}
+
+variable "application_name" {
+  type        = string
+  description = "The name of your application"
+  default     = "demo-abc"
+}
+
+resource "azurerm_resource_group" "example" {
+  name     = "example-resources"
+  location = "West Europe"
+}
+
+resource "azurerm_redis_cache" "redis" {
+  name                = "redis-${var.application_name}-001"
+  resource_group_name = azurerm_resource_group.example.name
+  location            = azurerm_resource_group.example.location
+  capacity            = 0
+  family              = "C"
+  sku_name            = "Standard"
+  enable_non_ssl_port = false
+  minimum_tls_version = "1.2"
+}
+
+resource "azurerm_spring_cloud_service" "example" {
+  name                = "${var.application_name}"
+  resource_group_name = azurerm_resource_group.example.name
+  location            = azurerm_resource_group.example.location
+}
+
+resource "azurerm_spring_cloud_app" "example" {
+  name                = "${var.application_name}-app"
+  resource_group_name = azurerm_resource_group.example.name
+  service_name        = azurerm_spring_cloud_service.example.name
+  is_public           = true
+  https_only          = true
+}
+
+resource "azurerm_spring_cloud_java_deployment" "example" {
+  name                = "default"
+  spring_cloud_app_id = azurerm_spring_cloud_app.example.id
+  cpu                 = 2
+  memory_in_gb        = 4
+  instance_count      = 2
+  jvm_options         = "-XX:+PrintGC"
+  runtime_version     = "Java_11"
+
+  environment_variables = {
+    "spring.redis.host"     = azurerm_redis_cache.redis.hostname
+    "spring.redis.password" = azurerm_redis_cache.redis.primary_access_key
+    "spring.redis.port"     = "6380"
+    "spring.redis.ssl"      = "true"
+  }
+}
+
+resource "azurerm_spring_cloud_active_deployment" "example" {
+  spring_cloud_app_id = azurerm_spring_cloud_app.example.id
+  deployment_name     = azurerm_spring_cloud_java_deployment.example.name
+}
+```
+
+---
 
 ## <a name="next-steps"></a>다음 단계
 
